--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
     
     <div class="game-board">
         <div class="hole">
-            <img src="images/photo.png" alt="Face 1">
+            <img src="images/photo1.png" alt="Face 1">
         </div>
         <div class="hole">
             <img src="images/photo.png" alt="Face 2">
         </div>
         <div class="hole">
-            <img src="images/photo.png" alt="Face 3">
+            <img src="images/photo1.png" alt="Face 3">
         </div>
         <div class="hole">
-            <img src="images/photo.png" alt="Face 4">
+            <img src="images/photo2.png" alt="Face 4">
         </div>
         <div class="hole">
-            <img src="images/photo.png" alt="Face 5">
+            <img src="images/photo3.jpg" alt="Face 5">
         </div>
         <div class="hole">
-            <img src="images/photo.png" alt="Face 6">
+            <img src="images/photo4.jpg" alt="Face 6">
         </div>
         <div class="hole">
-            <img src="images/photo.png" alt="Face 7">
+            <img src="images/photo4.jpg" alt="Face 7">
         </div>
         <div class="hole">
-            <img src="images/photo.png" alt="Face 8">
+            <img src="images/photo3.jpg" alt="Face 8">
         </div>
         <div class="hole">
-            <img src="images/photo.png" alt="Face 9">
+            <img src="images/photo2.png" alt="Face 9">
         </div>
         
     </div>
@@ -52,7 +52,7 @@
     <audio id="bomp-sound" src="sounds/bomp.wav"></audio>
     <audio id="end-sound" src="sounds/game-end.wav"></audio>
     <audio id="high-sound" src="sounds/game-end_high.wav"></audio>
-    <audio id="bgm-sound" src="sounds/bmg.wav"></audio>
+    <audio id="bgm-sound" src="sounds/bgm.mp3" type="audio/mp3"></audio>
     <script src="script.js"></script>
     <h1 id="credits">Made with 💖 by Rohan Chakravarty</h1>
 </body>
