Made Responsive using vh

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         
     </div>
-    <h1 id="credits">Made with 💖 by Rohan Chakravarty</h1>
+    <h1>Made with 💖 by Rohan Chakravarty</h1>
     <audio id="bomp-sound" src="sounds/bomp.wav"></audio>
     <audio id="end-sound" src="sounds/game-end.wav"></audio>
     <audio id="high-sound" src="sounds/game-end_high.wav"></audio>
