--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <audio id="bomp-sound" src="sounds/bomp.wav"></audio>
     <audio id="end-sound" src="sounds/game-end.wav"></audio>
     <audio id="high-sound" src="sounds/game-end_high.wav"></audio>
-    <audio id="bgm-sound" src="sounds/bgm-new.wav" type="audio/mp3"></audio>
+    <audio id="bgm-sound" src="sounds/bgm.mp3" type="audio/mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
