Code Cleanup and Intro to weather API

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         
     </div>
-    <h3 id="typing-footer"></h3>
+    <h3 id="typing-footer">Made with 💖 by Rohan Chakravarty</h3>
     <audio id="bomp-sound" src="sounds/bomp.wav"></audio>
     <audio id="end-sound" src="sounds/game-end.wav"></audio>
     <audio id="high-sound" src="sounds/game-end_high.wav"></audio>
