--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <h1>😏 Spank Me 😂</h1>
+    <h1>😂 Face Frenzy 😂</h1>
     <h2>High Score: <span id="highScore"></span></h2>
     <div id="detail">
         <select id="music-select">
